; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ehea/extr_ehea_main.c_ehea_stop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ehea/extr_ehea_main.c_ehea_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ehea_port = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [18 x i8] c"disabling port %s\00", align 1
@__EHEA_DISABLE_PORT_RESET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*)* @ehea_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ehea_stop(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.ehea_port*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %5 = load %struct.net_device*, %struct.net_device** %2, align 8
  %6 = call %struct.ehea_port* @netdev_priv(%struct.net_device* %5)
  store %struct.ehea_port* %6, %struct.ehea_port** %4, align 8
  %7 = load %struct.ehea_port*, %struct.ehea_port** %4, align 8
  %8 = call i64 @netif_msg_ifdown(%struct.ehea_port* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load %struct.net_device*, %struct.net_device** %2, align 8
  %12 = getelementptr inbounds %struct.net_device, %struct.net_device* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @ehea_info(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %13)
  br label %15

15:                                               ; preds = %10, %1
  %16 = load i32, i32* @__EHEA_DISABLE_PORT_RESET, align 4
  %17 = load %struct.ehea_port*, %struct.ehea_port** %4, align 8
  %18 = getelementptr inbounds %struct.ehea_port, %struct.ehea_port* %17, i32 0, i32 0
  %19 = call i32 @set_bit(i32 %16, i32* %18)
  %20 = load %struct.ehea_port*, %struct.ehea_port** %4, align 8
  %21 = getelementptr inbounds %struct.ehea_port, %struct.ehea_port* %20, i32 0, i32 3
  %22 = call i32 @cancel_work_sync(i32* %21)
  %23 = load %struct.ehea_port*, %struct.ehea_port** %4, align 8
  %24 = getelementptr inbounds %struct.ehea_port, %struct.ehea_port* %23, i32 0, i32 2
  %25 = call i32 @cancel_delayed_work_sync(i32* %24)
  %26 = load %struct.ehea_port*, %struct.ehea_port** %4, align 8
  %27 = getelementptr inbounds %struct.ehea_port, %struct.ehea_port* %26, i32 0, i32 1
  %28 = call i32 @mutex_lock(i32* %27)
  %29 = load %struct.net_device*, %struct.net_device** %2, align 8
  %30 = call i32 @netif_tx_stop_all_queues(%struct.net_device* %29)
  %31 = load %struct.ehea_port*, %struct.ehea_port** %4, align 8
  %32 = call i32 @port_napi_disable(%struct.ehea_port* %31)
  %33 = load %struct.net_device*, %struct.net_device** %2, align 8
  %34 = call i32 @ehea_down(%struct.net_device* %33)
  store i32 %34, i32* %3, align 4
  %35 = load %struct.ehea_port*, %struct.ehea_port** %4, align 8
  %36 = getelementptr inbounds %struct.ehea_port, %struct.ehea_port* %35, i32 0, i32 1
  %37 = call i32 @mutex_unlock(i32* %36)
  %38 = load i32, i32* @__EHEA_DISABLE_PORT_RESET, align 4
  %39 = load %struct.ehea_port*, %struct.ehea_port** %4, align 8
  %40 = getelementptr inbounds %struct.ehea_port, %struct.ehea_port* %39, i32 0, i32 0
  %41 = call i32 @clear_bit(i32 %38, i32* %40)
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local %struct.ehea_port* @netdev_priv(%struct.net_device*) #1

declare dso_local i64 @netif_msg_ifdown(%struct.ehea_port*) #1

declare dso_local i32 @ehea_info(i8*, i32) #1

declare dso_local i32 @set_bit(i32, i32*) #1

declare dso_local i32 @cancel_work_sync(i32*) #1

declare dso_local i32 @cancel_delayed_work_sync(i32*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @netif_tx_stop_all_queues(%struct.net_device*) #1

declare dso_local i32 @port_napi_disable(%struct.ehea_port*) #1

declare dso_local i32 @ehea_down(%struct.net_device*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @clear_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
